--- a/MedricalCost.ipynb
+++ b/MedricalCost.ipynb
@@ -1,8 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Multiple Linear Regression  \n",
+    "The impact of several factors on medical costs"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 444,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,29 +23,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Multiple Linear Regression  \n",
-    "The impact of several factors on medical costs"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Import Data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 445,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dataset = pd.read_csv('insurance.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 446,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -62,6 +53,7 @@
     }
    ],
    "source": [
+    "dataset = pd.read_csv('insurance.csv')\n",
     "print(dataset)"
    ]
   },
@@ -69,19 +61,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Data cleaning & checking"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Replacing \"smoker\" and \"sex\" columns to a boolean & drop Region column"
+    "## Data cleaning & checking  \n",
+    "Replacing \"smoker\" and \"sex\" columns to a boolean & drop Region column"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 447,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 448,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 449,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 450,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 451,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,13 +197,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 452,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<style>#sk-container-id-35 {\n",
+       "<style>#sk-container-id-1 {\n",
        "  /* Definition of color scheme common for light and dark mode */\n",
        "  --sklearn-color-text: black;\n",
        "  --sklearn-color-line: gray;\n",
@@ -247,15 +233,15 @@
        "  }\n",
        "}\n",
        "\n",
-       "#sk-container-id-35 {\n",
+       "#sk-container-id-1 {\n",
        "  color: var(--sklearn-color-text);\n",
        "}\n",
        "\n",
-       "#sk-container-id-35 pre {\n",
+       "#sk-container-id-1 pre {\n",
        "  padding: 0;\n",
        "}\n",
        "\n",
-       "#sk-container-id-35 input.sk-hidden--visually {\n",
+       "#sk-container-id-1 input.sk-hidden--visually {\n",
        "  border: 0;\n",
        "  clip: rect(1px 1px 1px 1px);\n",
        "  clip: rect(1px, 1px, 1px, 1px);\n",
@@ -267,7 +253,7 @@
        "  width: 1px;\n",
        "}\n",
        "\n",
-       "#sk-container-id-35 div.sk-dashed-wrapped {\n",
+       "#sk-container-id-1 div.sk-dashed-wrapped {\n",
        "  border: 1px dashed var(--sklearn-color-line);\n",
        "  margin: 0 0.4em 0.5em 0.4em;\n",
        "  box-sizing: border-box;\n",
@@ -275,7 +261,7 @@
        "  background-color: var(--sklearn-color-background);\n",
        "}\n",
        "\n",
-       "#sk-container-id-35 div.sk-container {\n",
+       "#sk-container-id-1 div.sk-container {\n",
        "  /* jupyter's `normalize.less` sets `[hidden] { display: none; }`\n",
        "     but bootstrap.min.css set `[hidden] { display: none !important; }`\n",
        "     so we also need the `!important` here to be able to override the\n",
@@ -285,7 +271,7 @@
        "  position: relative;\n",
        "}\n",
        "\n",
-       "#sk-container-id-35 div.sk-text-repr-fallback {\n",
+       "#sk-container-id-1 div.sk-text-repr-fallback {\n",
        "  display: none;\n",
        "}\n",
        "\n",
@@ -301,14 +287,14 @@
        "\n",
        "/* Parallel-specific style estimator block */\n",
        "\n",
-       "#sk-container-id-35 div.sk-parallel-item::after {\n",
+       "#sk-container-id-1 div.sk-parallel-item::after {\n",
        "  content: \"\";\n",
        "  width: 100%;\n",
        "  border-bottom: 2px solid var(--sklearn-color-text-on-default-background);\n",
        "  flex-grow: 1;\n",
        "}\n",
        "\n",
-       "#sk-container-id-35 div.sk-parallel {\n",
+       "#sk-container-id-1 div.sk-parallel {\n",
        "  display: flex;\n",
        "  align-items: stretch;\n",
        "  justify-content: center;\n",
@@ -316,28 +302,28 @@
        "  position: relative;\n",
        "}\n",
        "\n",
-       "#sk-container-id-35 div.sk-parallel-item {\n",
+       "#sk-container-id-1 div.sk-parallel-item {\n",
        "  display: flex;\n",
        "  flex-direction: column;\n",
        "}\n",
        "\n",
-       "#sk-container-id-35 div.sk-parallel-item:first-child::after {\n",
+       "#sk-container-id-1 div.sk-parallel-item:first-child::after {\n",
        "  align-self: flex-end;\n",
        "  width: 50%;\n",
        "}\n",
        "\n",
-       "#sk-container-id-35 div.sk-parallel-item:last-child::after {\n",
+       "#sk-container-id-1 div.sk-parallel-item:last-child::after {\n",
        "  align-self: flex-start;\n",
        "  width: 50%;\n",
        "}\n",
        "\n",
-       "#sk-container-id-35 div.sk-parallel-item:only-child::after {\n",
+       "#sk-container-id-1 div.sk-parallel-item:only-child::after {\n",
        "  width: 0;\n",
        "}\n",
        "\n",
        "/* Serial-specific style estimator block */\n",
        "\n",
-       "#sk-container-id-35 div.sk-serial {\n",
+       "#sk-container-id-1 div.sk-serial {\n",
        "  display: flex;\n",
        "  flex-direction: column;\n",
        "  align-items: center;\n",
@@ -355,14 +341,14 @@
        "\n",
        "/* Pipeline and ColumnTransformer style (default) */\n",
        "\n",
-       "#sk-container-id-35 div.sk-toggleable {\n",
+       "#sk-container-id-1 div.sk-toggleable {\n",
        "  /* Default theme specific background. It is overwritten whether we have a\n",
        "  specific estimator or a Pipeline/ColumnTransformer */\n",
        "  background-color: var(--sklearn-color-background);\n",
        "}\n",
        "\n",
        "/* Toggleable label */\n",
-       "#sk-container-id-35 label.sk-toggleable__label {\n",
+       "#sk-container-id-1 label.sk-toggleable__label {\n",
        "  cursor: pointer;\n",
        "  display: block;\n",
        "  width: 100%;\n",
@@ -372,7 +358,7 @@
        "  text-align: center;\n",
        "}\n",
        "\n",
-       "#sk-container-id-35 label.sk-toggleable__label-arrow:before {\n",
+       "#sk-container-id-1 label.sk-toggleable__label-arrow:before {\n",
        "  /* Arrow on the left of the label */\n",
        "  content: \"▸\";\n",
        "  float: left;\n",
@@ -380,13 +366,13 @@
        "  color: var(--sklearn-color-icon);\n",
        "}\n",
        "\n",
-       "#sk-container-id-35 label.sk-toggleable__label-arrow:hover:before {\n",
+       "#sk-container-id-1 label.sk-toggleable__label-arrow:hover:before {\n",
        "  color: var(--sklearn-color-text);\n",
        "}\n",
        "\n",
        "/* Toggleable content - dropdown */\n",
        "\n",
-       "#sk-container-id-35 div.sk-toggleable__content {\n",
+       "#sk-container-id-1 div.sk-toggleable__content {\n",
        "  max-height: 0;\n",
        "  max-width: 0;\n",
        "  overflow: hidden;\n",
@@ -395,12 +381,12 @@
        "  background-color: var(--sklearn-color-unfitted-level-0);\n",
        "}\n",
        "\n",
-       "#sk-container-id-35 div.sk-toggleable__content.fitted {\n",
+       "#sk-container-id-1 div.sk-toggleable__content.fitted {\n",
        "  /* fitted */\n",
        "  background-color: var(--sklearn-color-fitted-level-0);\n",
        "}\n",
        "\n",
-       "#sk-container-id-35 div.sk-toggleable__content pre {\n",
+       "#sk-container-id-1 div.sk-toggleable__content pre {\n",
        "  margin: 0.2em;\n",
        "  border-radius: 0.25em;\n",
        "  color: var(--sklearn-color-text);\n",
@@ -408,79 +394,79 @@
        "  background-color: var(--sklearn-color-unfitted-level-0);\n",
        "}\n",
        "\n",
-       "#sk-container-id-35 div.sk-toggleable__content.fitted pre {\n",
+       "#sk-container-id-1 div.sk-toggleable__content.fitted pre {\n",
        "  /* unfitted */\n",
        "  background-color: var(--sklearn-color-fitted-level-0);\n",
        "}\n",
        "\n",
-       "#sk-container-id-35 input.sk-toggleable__control:checked~div.sk-toggleable__content {\n",
+       "#sk-container-id-1 input.sk-toggleable__control:checked~div.sk-toggleable__content {\n",
        "  /* Expand drop-down */\n",
        "  max-height: 200px;\n",
        "  max-width: 100%;\n",
        "  overflow: auto;\n",
        "}\n",
        "\n",
-       "#sk-container-id-35 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {\n",
+       "#sk-container-id-1 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {\n",
        "  content: \"▾\";\n",
        "}\n",
        "\n",
        "/* Pipeline/ColumnTransformer-specific style */\n",
        "\n",
-       "#sk-container-id-35 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {\n",
+       "#sk-container-id-1 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {\n",
        "  color: var(--sklearn-color-text);\n",
        "  background-color: var(--sklearn-color-unfitted-level-2);\n",
        "}\n",
        "\n",
-       "#sk-container-id-35 div.sk-label.fitted input.sk-toggleable__control:checked~label.sk-toggleable__label {\n",
+       "#sk-container-id-1 div.sk-label.fitted input.sk-toggleable__control:checked~label.sk-toggleable__label {\n",
        "  background-color: var(--sklearn-color-fitted-level-2);\n",
        "}\n",
        "\n",
        "/* Estimator-specific style */\n",
        "\n",
        "/* Colorize estimator box */\n",
-       "#sk-container-id-35 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {\n",
+       "#sk-container-id-1 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {\n",
        "  /* unfitted */\n",
        "  background-color: var(--sklearn-color-unfitted-level-2);\n",
        "}\n",
        "\n",
-       "#sk-container-id-35 div.sk-estimator.fitted input.sk-toggleable__control:checked~label.sk-toggleable__label {\n",
+       "#sk-container-id-1 div.sk-estimator.fitted input.sk-toggleable__control:checked~label.sk-toggleable__label {\n",
        "  /* fitted */\n",
        "  background-color: var(--sklearn-color-fitted-level-2);\n",
        "}\n",
        "\n",
-       "#sk-container-id-35 div.sk-label label.sk-toggleable__label,\n",
-       "#sk-container-id-35 div.sk-label label {\n",
+       "#sk-container-id-1 div.sk-label label.sk-toggleable__label,\n",
+       "#sk-container-id-1 div.sk-label label {\n",
        "  /* The background is the default theme color */\n",
        "  color: var(--sklearn-color-text-on-default-background);\n",
        "}\n",
        "\n",
        "/* On hover, darken the color of the background */\n",
-       "#sk-container-id-35 div.sk-label:hover label.sk-toggleable__label {\n",
+       "#sk-container-id-1 div.sk-label:hover label.sk-toggleable__label {\n",
        "  color: var(--sklearn-color-text);\n",
        "  background-color: var(--sklearn-color-unfitted-level-2);\n",
        "}\n",
        "\n",
        "/* Label box, darken color on hover, fitted */\n",
-       "#sk-container-id-35 div.sk-label.fitted:hover label.sk-toggleable__label.fitted {\n",
+       "#sk-container-id-1 div.sk-label.fitted:hover label.sk-toggleable__label.fitted {\n",
        "  color: var(--sklearn-color-text);\n",
        "  background-color: var(--sklearn-color-fitted-level-2);\n",
        "}\n",
        "\n",
        "/* Estimator label */\n",
        "\n",
-       "#sk-container-id-35 div.sk-label label {\n",
+       "#sk-container-id-1 div.sk-label label {\n",
        "  font-family: monospace;\n",
        "  font-weight: bold;\n",
        "  display: inline-block;\n",
        "  line-height: 1.2em;\n",
        "}\n",
        "\n",
-       "#sk-container-id-35 div.sk-label-container {\n",
+       "#sk-container-id-1 div.sk-label-container {\n",
        "  text-align: center;\n",
        "}\n",
        "\n",
        "/* Estimator-specific */\n",
-       "#sk-container-id-35 div.sk-estimator {\n",
+       "#sk-container-id-1 div.sk-estimator {\n",
        "  font-family: monospace;\n",
        "  border: 1px dotted var(--sklearn-color-border-box);\n",
        "  border-radius: 0.25em;\n",
@@ -490,18 +476,18 @@
        "  background-color: var(--sklearn-color-unfitted-level-0);\n",
        "}\n",
        "\n",
-       "#sk-container-id-35 div.sk-estimator.fitted {\n",
+       "#sk-container-id-1 div.sk-estimator.fitted {\n",
        "  /* fitted */\n",
        "  background-color: var(--sklearn-color-fitted-level-0);\n",
        "}\n",
        "\n",
        "/* on hover */\n",
-       "#sk-container-id-35 div.sk-estimator:hover {\n",
+       "#sk-container-id-1 div.sk-estimator:hover {\n",
        "  /* unfitted */\n",
        "  background-color: var(--sklearn-color-unfitted-level-2);\n",
        "}\n",
        "\n",
-       "#sk-container-id-35 div.sk-estimator.fitted:hover {\n",
+       "#sk-container-id-1 div.sk-estimator.fitted:hover {\n",
        "  /* fitted */\n",
        "  background-color: var(--sklearn-color-fitted-level-2);\n",
        "}\n",
@@ -588,7 +574,7 @@
        "\n",
        "/* \"?\"-specific style due to the `<a>` HTML tag */\n",
        "\n",
-       "#sk-container-id-35 a.estimator_doc_link {\n",
+       "#sk-container-id-1 a.estimator_doc_link {\n",
        "  float: right;\n",
        "  font-size: 1rem;\n",
        "  line-height: 1em;\n",
@@ -603,31 +589,31 @@
        "  border: var(--sklearn-color-unfitted-level-1) 1pt solid;\n",
        "}\n",
        "\n",
-       "#sk-container-id-35 a.estimator_doc_link.fitted {\n",
+       "#sk-container-id-1 a.estimator_doc_link.fitted {\n",
        "  /* fitted */\n",
        "  border: var(--sklearn-color-fitted-level-1) 1pt solid;\n",
        "  color: var(--sklearn-color-fitted-level-1);\n",
        "}\n",
        "\n",
        "/* On hover */\n",
-       "#sk-container-id-35 a.estimator_doc_link:hover {\n",
+       "#sk-container-id-1 a.estimator_doc_link:hover {\n",
        "  /* unfitted */\n",
        "  background-color: var(--sklearn-color-unfitted-level-3);\n",
        "  color: var(--sklearn-color-background);\n",
        "  text-decoration: none;\n",
        "}\n",
        "\n",
-       "#sk-container-id-35 a.estimator_doc_link.fitted:hover {\n",
+       "#sk-container-id-1 a.estimator_doc_link.fitted:hover {\n",
        "  /* fitted */\n",
        "  background-color: var(--sklearn-color-fitted-level-3);\n",
        "}\n",
-       "</style><div id=\"sk-container-id-35\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>LinearRegression()</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator fitted sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-35\" type=\"checkbox\" checked><label for=\"sk-estimator-id-35\" class=\"sk-toggleable__label fitted sk-toggleable__label-arrow fitted\">&nbsp;&nbsp;LinearRegression<a class=\"sk-estimator-doc-link fitted\" rel=\"noreferrer\" target=\"_blank\" href=\"https://scikit-learn.org/1.5/modules/generated/sklearn.linear_model.LinearRegression.html\">?<span>Documentation for LinearRegression</span></a><span class=\"sk-estimator-doc-link fitted\">i<span>Fitted</span></span></label><div class=\"sk-toggleable__content fitted\"><pre>LinearRegression()</pre></div> </div></div></div></div>"
+       "</style><div id=\"sk-container-id-1\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>LinearRegression()</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator fitted sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" checked><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label fitted sk-toggleable__label-arrow fitted\">&nbsp;&nbsp;LinearRegression<a class=\"sk-estimator-doc-link fitted\" rel=\"noreferrer\" target=\"_blank\" href=\"https://scikit-learn.org/1.5/modules/generated/sklearn.linear_model.LinearRegression.html\">?<span>Documentation for LinearRegression</span></a><span class=\"sk-estimator-doc-link fitted\">i<span>Fitted</span></span></label><div class=\"sk-toggleable__content fitted\"><pre>LinearRegression()</pre></div> </div></div></div></div>"
       ],
       "text/plain": [
        "LinearRegression()"
       ]
      },
-     "execution_count": 452,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -652,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 453,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -668,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 454,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -719,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 455,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -746,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 456,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -795,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 457,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
